SSHCure -- A Flow-Based SSH Intrusion Detection System

Please check the manual or readme for installation instructions.
---

Release notes [v3.0]:

- [FEATURE] Overhauled front-end, with particular focus on incoming vs. outgoing attacks
- [FEATURE] Integration with QuarantaineNet Qmanage by sending reports to Qmanage's XML-RPC interface
- [FEATURE] Integration with OpenBL SSH blacklist
- [FEATURE] Full IPv6 support

Release notes [v2.4.1]:

- [BUGFIX]  Fixed a bug that could cause data model fields to be created automatically (and warning messages to be shown) due to Perl Autovivification

Release notes [v2.4]:

- [FEATURE] Added parallel processing capabilities
- [FEATURE] Fully re-engineered compromise detection
- [BUGFIX]  Fixed the Status page for setups in which the frontend has been installed in a non-default path

Release notes [v2.3.2]:

- [FEATURE] Extended database maintenance functionality with a ‘quick mode’ and ‘forced mode’ (see manual)
- [BUGFIX]  The detection algorithm is more resilient against TCP retransmissions
- [BUGFIX]  Fixed a problem that caused the detection of L3, L4 and L5 blocking mechanisms to fail
- [BUGFIX]  Fixed a problem that caused the backend hostname resolution to always return the same result
- [BUGFIX]  Various minor bug fixes and stability improvements

Release notes [v2.3.1]:

- [BUGFIX]  Fixed a bug that caused the attack profile plot to be incomplete in case of attacks with a large number of targets
- [BUGFIX]  Improved compatibility with older versions of Perl (< v5.10)
- [BUGFIX]  Various minor bug fixes and stability improvements

Release notes [v2.3]:

WARNING: Neither the configuration file, nor the database of previous versions is compatible with this release!

- [FEATURE] Completely overhauled brute-force phase detection
- [FEATURE] Completely overhauled notification mechanism (see Section 3.1.2 of manual)
- [FEATURE] Major performance improvements for both frontend and backend